--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Setup Go 1.23
         uses: actions/setup-go@v5
         with:
-          go-version: '1.23.x'
+          go-version: '^1.23.x'
 
       - name: Using Go version
         run: go version
